--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.3",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "os": "^0.1.2",
     "path": "^0.12.7",
